ORC-1011: Activate `java17` profile automatically